--- a/config.json
+++ b/config.json
@@ -5,8 +5,8 @@
       "current": 300,
       "data": "./data/experiment/data_70MeV_1000MU.csv",
       "mus": {
-        "x": [506, 517, 515, 501, 516, 498],
-        "y": [272, 276, 280, 280, 281, 278]
+        "x": [505.32, 517.43, 515.38, 500.28, 515.22, 498.28],
+        "y": [271.48, 276.24, 279.71, 279.63, 280.84, 277.88]
       },
       "sigmas":{
         "x": [14.26, 16.40, 18.94, 21.64, 24.75, 28.42],
@@ -54,6 +54,24 @@
           [277, 40, 60]
         ]
       },
+      "expectedsub": {
+        "x": [
+          [512, 15, 200], 
+          [512, 25, 175],
+          [512, 30, 140],
+          [512, 35, 120],
+          [512, 40, 100],
+          [512, 45, 80]
+        ],
+        "y": [
+          [256, 15, 200],
+          [256, 20, 150],
+          [256, 25, 120],
+          [256, 30, 100],
+          [256, 35, 80],
+          [256, 40, 60]
+        ]
+      },
       "n_fevts":{
         "1": 39,
         "2": 0
@@ -69,12 +87,16 @@
         "y": [272, 276, 279, 280, 281, 279]
       },
       "sigmas": {
-        "x": [14.79, 16.77, 20.17, 23.30, 28.04, 30.29],
+        "x": [16.62, 18.67, 21.97, 25.24, 30.65, 33.82],
         "y": [17.45, 19.96, 23.00, 27.11, 29.46, 33.07]
       },      
+      "range": {
+        "xsub": [[450, 575], [420, 600], [400, 620], [390, 640], [380, 650], [370, 660]],
+        "ysub": [[180, 330], [170, 340], [160, 350], [150, 360], [140, 370], [130, 380]]
+      },
       "siglim":{
         "x": [
-          [465, 560],
+          [400, 650],
           [470, 570],
           [450, 590],
           [430, 590],
@@ -106,6 +128,24 @@
           [277, 30, 70],
           [278, 35, 60],
           [277, 40, 50]
+        ]
+      },
+      "expectedsub": {
+        "x": [
+          [512, 15, 200], 
+          [512, 25, 175],
+          [512, 30, 140],
+          [512, 35, 120],
+          [512, 40, 100],
+          [512, 45, 80]
+        ],
+        "y": [
+          [256, 15, 200],
+          [256, 20, 150],
+          [256, 25, 120],
+          [256, 30, 100],
+          [256, 35, 80],
+          [256, 40, 60]
         ]
       }
     },
@@ -156,6 +196,24 @@
           [278, 35, 100, 278, 100, 15],
           [277, 40, 90, 277, 120, 15]
         ]
+      },
+      "expectedsub": {
+        "x": [
+          [512, 5, 800, 512, 60, 300], 
+          [512, 10, 700, 512, 70, 250],
+          [512, 15, 500, 512, 80, 120],
+          [512, 20, 400, 512, 90, 100],
+          [512, 25, 350, 512, 100, 80],
+          [512, 30, 300, 512, 120, 50]
+        ],
+        "y": [
+          [256, 5, 800, 256, 60, 180],
+          [256, 10, 700, 256, 70, 150],
+          [256, 15, 600, 256, 80, 120],
+          [256, 20, 450, 256, 90, 100],
+          [256, 25, 350, 256, 100, 80],
+          [256, 30, 300, 256, 120, 50]
+        ]
       }
     },
     "150 MeV":{
@@ -167,8 +225,8 @@
         "y": [273, 278, 281, 282, 284, 281]
       },
       "sigmas": {
-        "x": [16.06, 17.91, 20.27, 21.91, 23.66, 27.17],
-        "y": [17.39, 19.25, 22.42, 24.89, 30.69, 33.31]
+        "x": [16.06, 19.31, 22.74, 26.47, 28.61, 31.91],
+        "y": [17.25, 19.41, 20.64, 23.37, 28.58, 31.74]
       },
       "siglim":{
         "x": [
@@ -205,6 +263,24 @@
           [278, 35, 180, 278, 100, 30],
           [277, 40, 150, 277, 120, 30]
         ]
+      },
+      "expectedsub": {
+        "x": [
+          [512, 5, 800, 512, 60, 300], 
+          [512, 10, 700, 512, 70, 250],
+          [512, 15, 500, 512, 80, 120],
+          [512, 20, 400, 512, 90, 100],
+          [512, 25, 350, 512, 100, 80],
+          [512, 30, 300, 512, 120, 50]
+        ],
+        "y": [
+          [256, 5, 800, 256, 60, 180],
+          [256, 10, 700, 256, 70, 150],
+          [256, 15, 600, 256, 80, 120],
+          [256, 20, 450, 256, 90, 100],
+          [256, 25, 350, 256, 100, 80],
+          [256, 30, 300, 256, 120, 50]
+        ]
       }
     },
     "180 MeV":{
@@ -216,8 +292,8 @@
         "y": [273, 278, 281, 282, 284, 281]
       },
       "sigmas": {
-        "x": [15.11, 17.98, 20.95, 23.98, 26.38, 29.58],
-        "y": [17.80, 20.59, 23.47, 26.21, 27.91, 30.09]
+        "x": [16.45, 19.17, 22.58, 26.43, 29.13, 31.63],
+        "y": [18.54, 20.79, 23.15, 23.66, 26.28, 29.37]
       },
       "siglim":{
         "x": [
@@ -254,6 +330,24 @@
           [278, 35, 180, 278, 100, 30],
           [277, 40, 150, 277, 120, 30]
         ]
+      },
+      "expectedsub": {
+        "x": [
+          [512, 5, 800, 512, 60, 300], 
+          [512, 10, 700, 512, 70, 250],
+          [512, 15, 500, 512, 80, 120],
+          [512, 20, 400, 512, 90, 100],
+          [512, 25, 350, 512, 100, 80],
+          [512, 30, 300, 512, 120, 50]
+        ],
+        "y": [
+          [256, 5, 800, 256, 60, 180],
+          [256, 10, 700, 256, 70, 150],
+          [256, 15, 600, 256, 80, 120],
+          [256, 20, 450, 256, 90, 100],
+          [256, 25, 350, 256, 100, 80],
+          [256, 30, 300, 256, 120, 50]
+        ]
       }
     },
     "200 MeV":{
@@ -265,8 +359,8 @@
         "y": [273, 278, 281, 282, 284, 281]
       },
       "sigmas": {
-        "x": [14.88, 18.63, 21.04, 25.48, 29.84, 33.92],
-        "y": [17.62, 19.55, 22.74, 26.27, 29.60, 34.24]
+        "x": [18.18, 21.44, 25.03, 30.43, 34.04, 38.03],
+        "y": [19.25, 21.01, 24.25, 27.31, 29.19, 32.58]
 
       },
       "siglim":{
@@ -303,6 +397,24 @@
           [277, 30, 450, 277, 90, 100],
           [278, 35, 350, 278, 100, 80],
           [277, 40, 300, 277, 120, 50]
+        ]
+      },
+      "expectedsub": {
+        "x": [
+          [512, 5, 800, 512, 60, 300], 
+          [512, 10, 700, 512, 70, 250],
+          [512, 15, 500, 512, 80, 120],
+          [512, 20, 400, 512, 90, 100],
+          [512, 25, 350, 512, 100, 80],
+          [512, 30, 300, 512, 120, 50]
+        ],
+        "y": [
+          [256, 5, 800, 256, 60, 180],
+          [256, 10, 700, 256, 70, 150],
+          [256, 15, 600, 256, 80, 120],
+          [256, 20, 450, 256, 90, 100],
+          [256, 25, 350, 256, 100, 80],
+          [256, 30, 300, 256, 120, 50]
         ]
       },
       "n_fevts":{
@@ -345,5 +457,13 @@
       "70": 0.003,
       "200": 0.0008
     }
+  },
+  "KCMH": {
+    "sigmas":{
+      "70": []
+    },
+    "dis": [
+
+    ]
   }
 }
