finished getting center

--- a/config.json
+++ b/config.json
@@ -459,11 +459,18 @@
     }
   },
   "KCMH": {
+    "track": {
+      "hits": {
+        "center": {
+          "x": [505.13, 517.54, 516.26, 500.07, 514.79, 496.90],
+          "y": [272.38, 276.87, 280.42, 281.06, 282.82, 280.49]
+        }
+      }
+    },
     "sigmas":{
       "70": []
     },
     "dis": [
-
     ]
   }
 }
